--- a/Sobieski.html
+++ b/Sobieski.html
@@ -37,7 +37,12 @@
       <p>Motion</p>
     </div>
 
+    
   </div>
+    <div class="nav"></div>
+    <div class="content"></div>
+    <div class="table"></div>
+    <div class="footer"></div>
 
   
 </body>
